<resources>
    <string name="app_name">IMA</string>
    <string name="id">I  D : </string>
    <string name="pw">PW : </string>
    <string name="names">이름 : </string>
    <string name="autoLogin">자동 로그인</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="join">사용자 등록</string>
    <string name="okBtn">확인</string>
    <string name="cancelBtn">취소</string>
</resources>