<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/join_dialog_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@drawable/join_dialog_title_backgroudn"
            android:fontFamily="@font/rixyeoljeongdo_regular"
            android:gravity="center"
            android:text="@string/join"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rixyeoljeongdo_regular"
                android:gravity="right"
                android:letterSpacing="0.2"
                android:text="@string/id"
                android:textColor="@color/Darkgray" />

            <EditText
                android:id="@+id/joinId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionGo"
                android:nextFocusDown="@id/joinPw"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rixyeoljeongdo_regular"
                android:gravity="right"
                android:letterSpacing="0.2"
                android:text="@string/pw"
                android:textColor="@color/Darkgray" />

            <EditText
                android:id="@+id/joinPw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionGo"
                android:nextFocusDown="@id/joinName"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rixyeoljeongdo_regular"
                android:gravity="right"
                android:letterSpacing="0.2"
                android:text="@string/names"
                android:textColor="@color/Darkgray" />

            <EditText
                android:id="@+id/joinName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:imeOptions="actionGo"
                android:nextFocusDown="@id/joinOkBtn"
                android:singleLine="true" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/joinOkBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/join_dialog_left_btn_background"
            android:fontFamily="@font/rixyeoljeongdo_regular"
            android:text="@string/okBtn"
            android:textColor="@color/Darkgray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/joinCancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:layout_weight="1"
            android:background="@drawable/join_dialog_right_btn_background"
            android:fontFamily="@font/rixyeoljeongdo_regular"
            android:text="@string/cancelBtn"
            android:textColor="@color/Darkgray" />


    </LinearLayout>


</LinearLayout>